--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh">
 
 <head>
     <meta charset="UTF-8">
@@ -22,10 +22,11 @@
 
     </div>
     <!-- 圖片 -->
-    <div>></div>
+    
     <section id="picture">
-        <img src="" alt="">
-        <img src="" alt="">
+        <div>></div>
+        <div></div>
+        <div></div>
     </section>
     <!-- 內容 -->
     <section id="content">
