--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
             <a href="#">聯絡我們</a>
         </div>
     </nav>
-    <!-- 橫幅 -->
-    <div id="banner">
 
-    </div>
+    <!-- 橫幅 -->
+    <div id="banner"></div>
+
     <!-- 圖片 -->
-    
     <section id="picture">
         <div>></div>
         <div></div>
         <div></div>
     </section>
+
     <!-- 內容 -->
     <section id="content">
         <h1>標題</h1>
