--- a/index.html
+++ b/index.html
@@ -16,6 +16,13 @@
             <a href="#">關於我們</a>
             <a href="#">聯絡我們</a>
         </div>
+        <!-- 手機板、平板選單 -->
+        <div id="menu">
+            <a href="#"><img src="/img/menu.png" alt="選單"></a>
+            <a href="#">首頁</a>
+            <a href="#">關於我們</a>
+            <a href="#">聯絡我們</a>
+        </div>
     </nav>
 
     <!-- 橫幅 -->
